--- a/style.css
+++ b/style.css
@@ -260,10 +260,8 @@ main hr {
     padding: 0px 100px;
     background-image: url(images/a53560c8088900e266880f779dacced7.gif);
 
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    background-position: center;
+    background-size: 100% 100%;
+
  }
  .row{
     display: flex;
